# yt-book

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
utils/: file_path_utils.py  transcribe_audios.py  video_audio_conversion.py  yt_download.py
utils/gather_data/: transcribe_audios.py  video_audio_conversion.py
