[tool.poetry]
name = "yt-book"
version = "0.1.0"
description = ""
authors = ["Ziyang SONG <ziyang.song@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
yt-dlp = "^2025.6.25"
poetry-core = "^2.1.3"
certifi = "^2025.6.15"
moviepy = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
